@@ -20,25 +20,24 @@ package org.apache.pinot.segment.local.recordtransformer;
 
 import com.google.common.collect.ImmutableMap;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
-import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
-import org.apache.pinot.spi.config.table.ingestion.ComplexTypeConfig;
+import org.apache.pinot.spi.config.table.ingestion.ComplexTypeConfig.CollectionNotUnnestedToJson;
 import org.apache.pinot.spi.data.readers.GenericRow;
-import org.testng.Assert;
 import org.testng.annotations.Test;
 
-import static org.apache.pinot.segment.local.recordtransformer.ComplexTypeTransformer.DEFAULT_COLLECTION_TO_JSON_MODE;
+import static org.testng.Assert.assertEquals;
+import static org.testng.Assert.assertTrue;
+import static org.testng.Assert.fail;
 
 
+@SuppressWarnings({"rawtypes", "unchecked"})
 public class ComplexTypeTransformerTest {
+
   @Test
   public void testFlattenMap() {
-    ComplexTypeTransformer transformer = new ComplexTypeTransformer(new ArrayList<>(), ".");
-
     // test flatten root-level tuples
     GenericRow genericRow = new GenericRow();
     genericRow.putValue("a", 1L);
@@ -55,17 +54,18 @@ public class ComplexTypeTransformerTest {
     map2.put("c", 3);
     genericRow.putValue("map2", map2);
 
-    transformer.transform(genericRow);
-    Assert.assertEquals(genericRow.getValue("a"), 1L);
-    Assert.assertEquals(genericRow.getValue("map1.b"), "v");
-    Assert.assertEquals(genericRow.getValue("map1.im1.aa"), 2);
-    Assert.assertEquals(genericRow.getValue("map1.im1.bb"), "u");
-    Assert.assertEquals(genericRow.getValue("map1.im1.cc"), new byte[]{1, 1});
-
-    Assert.assertEquals(genericRow.getValue("map2.c"), 3);
+    ComplexTypeTransformer transformer = new ComplexTypeTransformer.Builder().build();
+    List<GenericRow> transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 1);
+    GenericRow transformedRow = transformedRows.get(0);
+    assertEquals(transformedRow.getValue("a"), 1L);
+    assertEquals(transformedRow.getValue("map1.b"), "v");
+    assertEquals(transformedRow.getValue("map1.im1.aa"), 2);
+    assertEquals(transformedRow.getValue("map1.im1.bb"), "u");
+    assertEquals(transformedRow.getValue("map1.im1.cc"), new byte[]{1, 1});
+    assertEquals(transformedRow.getValue("map2.c"), 3);
 
     // test flattening the tuple inside the collection
-    transformer = new ComplexTypeTransformer(Arrays.asList("l1"), ".");
     genericRow = new GenericRow();
     List<Map<String, Object>> list1 = new ArrayList<>();
     list1.add(map1);
@@ -73,14 +73,14 @@ public class ComplexTypeTransformerTest {
     List<Integer> list2 = new ArrayList<>();
     list2.add(2);
     genericRow.putValue("l2", list2);
+    transformer = new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("l1")).build();
     transformer.flattenMap(genericRow, new ArrayList<>(genericRow.getFieldToValueMap().keySet()));
     Map<String, Object> map = (Map<String, Object>) ((Collection) genericRow.getValue("l1")).iterator().next();
-    Assert.assertEquals(map.get("b"), "v");
-    Assert.assertEquals(map.get("im1.aa"), 2);
-    Assert.assertEquals(map.get("im1.bb"), "u");
+    assertEquals(map.get("b"), "v");
+    assertEquals(map.get("im1.aa"), 2);
+    assertEquals(map.get("im1.bb"), "u");
 
     // test overriding delimiter
-    transformer = new ComplexTypeTransformer(Arrays.asList("l1"), "_");
     genericRow = new GenericRow();
     innerMap1 = new HashMap<>();
     innerMap1.put("aa", 2);
@@ -90,10 +90,11 @@ public class ComplexTypeTransformerTest {
     list1 = new ArrayList<>();
     list1.add(map1);
     genericRow.putValue("l1", list1);
+    transformer = new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("l1")).setDelimiter("_").build();
     transformer.flattenMap(genericRow, new ArrayList<>(genericRow.getFieldToValueMap().keySet()));
     map = (Map<String, Object>) ((Collection) genericRow.getValue("l1")).iterator().next();
-    Assert.assertEquals(map.get("im1_aa"), 2);
-    Assert.assertEquals(map.get("im1_bb"), "u");
+    assertEquals(map.get("im1_aa"), 2);
+    assertEquals(map.get("im1_bb"), "u");
   }
 
   @Test
@@ -115,7 +116,6 @@ public class ComplexTypeTransformerTest {
     //    {
     //      "array.a":"v2"
     //    }]
-    ComplexTypeTransformer transformer = new ComplexTypeTransformer(Arrays.asList("array"), ".");
     GenericRow genericRow = new GenericRow();
     Object[] array = new Object[2];
     Map<String, Object> map1 = new HashMap<>();
@@ -125,13 +125,15 @@ public class ComplexTypeTransformerTest {
     array[0] = map1;
     array[1] = map2;
     genericRow.putValue("array", array);
-    transformer.transform(genericRow);
-    Assert.assertNotNull(genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY));
-    Collection<GenericRow> collection = (Collection<GenericRow>) genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY);
-    Assert.assertEquals(collection.size(), 2);
-    Iterator<GenericRow> itr = collection.iterator();
-    Assert.assertEquals(itr.next().getValue("array.a"), "v1");
-    Assert.assertEquals(itr.next().getValue("array.a"), "v2");
+    List<GenericRow> transformedRows;
+    ComplexTypeTransformer transformer =
+        new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("array")).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 2);
+    assertEquals(transformedRows.get(0).getValue("array.a"), "v1");
+    assertEquals(transformedRows.get(0).getValue("array"), array);
+    assertEquals(transformedRows.get(1).getValue("array.a"), "v2");
+    assertEquals(transformedRows.get(1).getValue("array"), array);
 
     // unnest sibling collections
     //    {
@@ -165,7 +167,6 @@ public class ComplexTypeTransformerTest {
     //      "array.a":"v2","array2.b":"v4"
     //   }]
     //
-    transformer = new ComplexTypeTransformer(Arrays.asList("array", "array2"), ".");
     genericRow = new GenericRow();
     Object[] array2 = new Object[2];
     Map<String, Object> map3 = new HashMap<>();
@@ -176,23 +177,25 @@ public class ComplexTypeTransformerTest {
     array2[1] = map4;
     genericRow.putValue("array", array);
     genericRow.putValue("array2", array2);
-    transformer.transform(genericRow);
-    Assert.assertNotNull(genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY));
-    collection = (Collection<GenericRow>) genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY);
-    Assert.assertEquals(collection.size(), 4);
-    itr = collection.iterator();
-    GenericRow next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v1");
-    Assert.assertEquals(next.getValue("array2.b"), "v3");
-    next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v1");
-    Assert.assertEquals(next.getValue("array2.b"), "v4");
-    next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v2");
-    Assert.assertEquals(next.getValue("array2.b"), "v3");
-    next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v2");
-    Assert.assertEquals(next.getValue("array2.b"), "v4");
+    transformer = new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("array", "array2")).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 4);
+    assertEquals(transformedRows.get(0).getValue("array.a"), "v1");
+    assertEquals(transformedRows.get(0).getValue("array2.b"), "v3");
+    assertEquals(transformedRows.get(0).getValue("array"), array);
+    assertEquals(transformedRows.get(0).getValue("array2"), array2);
+    assertEquals(transformedRows.get(1).getValue("array.a"), "v1");
+    assertEquals(transformedRows.get(1).getValue("array2.b"), "v4");
+    assertEquals(transformedRows.get(1).getValue("array"), array);
+    assertEquals(transformedRows.get(1).getValue("array2"), array2);
+    assertEquals(transformedRows.get(2).getValue("array.a"), "v2");
+    assertEquals(transformedRows.get(2).getValue("array2.b"), "v3");
+    assertEquals(transformedRows.get(2).getValue("array"), array);
+    assertEquals(transformedRows.get(2).getValue("array2"), array2);
+    assertEquals(transformedRows.get(3).getValue("array.a"), "v2");
+    assertEquals(transformedRows.get(3).getValue("array2.b"), "v4");
+    assertEquals(transformedRows.get(3).getValue("array"), array);
+    assertEquals(transformedRows.get(3).getValue("array2"), array2);
 
     // unnest nested collection
     // {
@@ -226,40 +229,64 @@ public class ComplexTypeTransformerTest {
     //   {
     //      "array.a":"v2"
     //   }]
-    transformer = new ComplexTypeTransformer(Arrays.asList("array", "array.array2"), ".");
     genericRow = new GenericRow();
     genericRow.putValue("array", array);
     map1.put("array2", array2);
     map2.put("array2", new Object[]{});
-    transformer.transform(genericRow);
-    Assert.assertNotNull(genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY));
-    collection = (Collection<GenericRow>) genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY);
-    Assert.assertEquals(collection.size(), 3);
-    itr = collection.iterator();
-    next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v1");
-    Assert.assertEquals(next.getValue("array.array2.b"), "v3");
-    next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v1");
-    Assert.assertEquals(next.getValue("array.array2.b"), "v4");
-    next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v2");
+    transformer = new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("array", "array.array2")).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 3);
+    assertEquals(transformedRows.get(0).getValue("array.a"), "v1");
+    assertEquals(transformedRows.get(0).getValue("array.array2.b"), "v3");
+    assertEquals(transformedRows.get(1).getValue("array.a"), "v1");
+    assertEquals(transformedRows.get(1).getValue("array.array2.b"), "v4");
+    assertEquals(transformedRows.get(2).getValue("array.a"), "v2");
 
-    transformer = new ComplexTypeTransformer(Arrays.asList("array"), ".");
     genericRow = new GenericRow();
     genericRow.putValue("array", array);
     map1.put("array2", array2);
     map2.put("array2", new Object[]{});
-    transformer.transform(genericRow);
-    Assert.assertNotNull(genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY));
-    collection = (Collection<GenericRow>) genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY);
-    Assert.assertEquals(collection.size(), 2);
-    itr = collection.iterator();
-    next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v1");
-    Assert.assertEquals(next.getValue("array.array2"), "[{\"b\":\"v3\"},{\"b\":\"v4\"}]");
-    next = itr.next();
-    Assert.assertEquals(next.getValue("array.a"), "v2");
+    transformer = new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("array")).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 2);
+    assertEquals(transformedRows.get(0).getValue("array.a"), "v1");
+    assertEquals(transformedRows.get(0).getValue("array.array2"), "[{\"b\":\"v3\"},{\"b\":\"v4\"}]");
+    assertEquals(transformedRows.get(1).getValue("array.a"), "v2");
+
+    // unnest root level collection with simple non-primitive values
+    //    {
+    //      "a": "value",
+    //      "b": "another",
+    //      "array":["x", "y"]
+    //    }
+    //  ->
+    //    [{
+    //      "a": "value",
+    //      "b": "another",
+    //      "array":"x"
+    //    },
+    //    {
+    //      "a": "value",
+    //      "b": "another",
+    //      "array":"y"
+    //    }]
+    genericRow = new GenericRow();
+    genericRow.putValue("a", "value");
+    genericRow.putValue("b", "another");
+    array = new Object[2];
+    array[0] = "x";
+    array[1] = "y";
+    genericRow.putValue("array", array);
+    transformer =
+        new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("array")).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 2);
+    assertEquals(transformedRows.get(0).getValue("a"), "value");
+    assertEquals(transformedRows.get(0).getValue("b"), "another");
+    assertEquals(transformedRows.get(0).getValue("array"), "x");
+    assertEquals(transformedRows.get(1).getValue("a"), "value");
+    assertEquals(transformedRows.get(1).getValue("b"), "another");
+    assertEquals(transformedRows.get(1).getValue("array"), "y");
   }
 
   @Test
@@ -297,18 +324,15 @@ public class ComplexTypeTransformerTest {
     Object[] level1Arr = new Object[]{level1, level1};
     genericRow.putValue("level1", level1Arr);
 
-    List<String> fieldsToUnnest = new ArrayList<>();
-    fieldsToUnnest.add("level1");
-    fieldsToUnnest.add("level1.level2.level3");
-
-    ComplexTypeTransformer complexTypeTransformer = new ComplexTypeTransformer(fieldsToUnnest, ".");
-    GenericRow result = complexTypeTransformer.transform(genericRow);
-
-    Assert.assertNotNull(result.getValue(GenericRow.MULTIPLE_RECORDS_KEY));
-    Collection<GenericRow> rows = (Collection<GenericRow>) result.getValue(GenericRow.MULTIPLE_RECORDS_KEY);
-    Assert.assertEquals(rows.size(), 4);
-    for (GenericRow row : rows) {
-      Assert.assertEquals(row.getValue("level1.level2.level3.level4"), "foo_bar");
+    List<GenericRow> transformedRows;
+    ComplexTypeTransformer transformer =
+        new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("level1", "level1.level2.level3"))
+            .setCollectionNotUnnestedToJson(CollectionNotUnnestedToJson.NONE)
+            .build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 4);
+    for (GenericRow row : transformedRows) {
+      assertEquals(row.getValue("level1.level2.level3.level4"), "foo_bar");
     }
   }
 
@@ -334,7 +358,6 @@ public class ComplexTypeTransformerTest {
     //            }
     //         ]"
     // }]
-    ComplexTypeTransformer transformer = new ComplexTypeTransformer(Arrays.asList("array"), ".");
     GenericRow genericRow = new GenericRow();
     Map<String, Object> map = new HashMap<>();
     Object[] array1 = new Object[1];
@@ -343,22 +366,24 @@ public class ComplexTypeTransformerTest {
     Object[] array = new Object[1];
     array[0] = map;
     genericRow.putValue("array", array);
-    transformer.transform(genericRow);
-    Assert.assertNotNull(genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY));
-    Collection<GenericRow> collection = (Collection<GenericRow>) genericRow.getValue(GenericRow.MULTIPLE_RECORDS_KEY);
-    GenericRow row = collection.iterator().next();
-    Assert.assertTrue(row.getValue("array.array1") instanceof String);
+    List<GenericRow> transformedRows;
+    ComplexTypeTransformer transformer =
+        new ComplexTypeTransformer.Builder().setFieldsToUnnest(List.of("array")).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 1);
+    assertTrue(transformedRows.get(0).getValue("array.array1") instanceof String);
 
     // primitive array not converted
     // {
     //   "array":[1,2]
     // }
-    transformer = new ComplexTypeTransformer(Arrays.asList(), ".");
     genericRow = new GenericRow();
     array = new Object[]{1, 2};
     genericRow.putValue("array", array);
-    transformer.transform(genericRow);
-    Assert.assertTrue(genericRow.getValue("array") instanceof Object[]);
+    transformer = new ComplexTypeTransformer.Builder().build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 1);
+    assertTrue(transformedRows.get(0).getValue("array") instanceof Object[]);
 
     // primitive array converted
     // {
@@ -368,13 +393,14 @@ public class ComplexTypeTransformerTest {
     // {
     //   "array":"[1,2]"
     // }
-    transformer = new ComplexTypeTransformer(Arrays.asList(), ".",
-        ComplexTypeConfig.CollectionNotUnnestedToJson.ALL, new HashMap<>(), null);
     genericRow = new GenericRow();
     array = new Object[]{1, 2};
     genericRow.putValue("array", array);
-    transformer.transform(genericRow);
-    Assert.assertTrue(genericRow.getValue("array") instanceof String);
+    transformer =
+        new ComplexTypeTransformer.Builder().setCollectionNotUnnestedToJson(CollectionNotUnnestedToJson.ALL).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 1);
+    assertTrue(transformedRows.get(0).getValue("array") instanceof String);
 
     // array under tuple converted
     // {
@@ -396,8 +422,11 @@ public class ComplexTypeTransformerTest {
     //  }"
     genericRow = new GenericRow();
     genericRow.putValue("t", map);
-    transformer.transform(genericRow);
-    Assert.assertTrue(genericRow.getValue("t.array1") instanceof String);
+    transformer =
+        new ComplexTypeTransformer.Builder().setCollectionNotUnnestedToJson(CollectionNotUnnestedToJson.ALL).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 1);
+    assertTrue(transformedRows.get(0).getValue("t.array1") instanceof String);
 
     // array under tuple not converted
     // {
@@ -414,10 +443,11 @@ public class ComplexTypeTransformerTest {
     array1[0] = ImmutableMap.of("b", "v1");
     map.put("array1", array1);
     genericRow.putValue("t", map);
-    transformer = new ComplexTypeTransformer(Arrays.asList(), ".",
-        ComplexTypeConfig.CollectionNotUnnestedToJson.NONE, new HashMap<>(), null);
-    transformer.transform(genericRow);
-    Assert.assertTrue(ComplexTypeTransformer.isNonPrimitiveArray(genericRow.getValue("t.array1")));
+    transformer =
+        new ComplexTypeTransformer.Builder().setCollectionNotUnnestedToJson(CollectionNotUnnestedToJson.NONE).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 1);
+    assertTrue(ComplexTypeTransformer.isNonPrimitiveArray(transformedRows.get(0).getValue("t.array1")));
   }
 
   @Test
@@ -425,29 +455,28 @@ public class ComplexTypeTransformerTest {
     HashMap<String, String> prefixesToRename = new HashMap<>();
     prefixesToRename.put("map1.", "");
     prefixesToRename.put("map2", "test");
-    ComplexTypeTransformer transformer = new ComplexTypeTransformer(new ArrayList<>(), ".",
-        DEFAULT_COLLECTION_TO_JSON_MODE, prefixesToRename, null);
 
     GenericRow genericRow = new GenericRow();
     genericRow.putValue("a", 1L);
     genericRow.putValue("map1.b", 2L);
     genericRow.putValue("map2.c", "u");
+    ComplexTypeTransformer transformer =
+        new ComplexTypeTransformer.Builder().setPrefixesToRename(prefixesToRename).build();
     transformer.renamePrefixes(genericRow);
-    Assert.assertEquals(genericRow.getValue("a"), 1L);
-    Assert.assertEquals(genericRow.getValue("b"), 2L);
-    Assert.assertEquals(genericRow.getValue("test.c"), "u");
+    assertEquals(genericRow.getValue("a"), 1L);
+    assertEquals(genericRow.getValue("b"), 2L);
+    assertEquals(genericRow.getValue("test.c"), "u");
 
     // name conflict where there becomes duplicate field names after renaming
     prefixesToRename = new HashMap<>();
     prefixesToRename.put("test.", "");
-    transformer = new ComplexTypeTransformer(new ArrayList<>(), ".",
-        DEFAULT_COLLECTION_TO_JSON_MODE, prefixesToRename, null);
     genericRow = new GenericRow();
     genericRow.putValue("a", 1L);
     genericRow.putValue("test.a", 2L);
+    transformer = new ComplexTypeTransformer.Builder().setPrefixesToRename(prefixesToRename).build();
     try {
       transformer.renamePrefixes(genericRow);
-      Assert.fail("Should fail due to name conflict after renaming");
+      fail("Should fail due to name conflict after renaming");
     } catch (RuntimeException e) {
       // expected
     }
@@ -455,28 +484,16 @@ public class ComplexTypeTransformerTest {
     // name conflict where there becomes an empty field name after renaming
     prefixesToRename = new HashMap<>();
     prefixesToRename.put("test", "");
-    transformer = new ComplexTypeTransformer(new ArrayList<>(), ".",
-        DEFAULT_COLLECTION_TO_JSON_MODE, prefixesToRename, null);
     genericRow = new GenericRow();
     genericRow.putValue("a", 1L);
     genericRow.putValue("test", 2L);
+    transformer = new ComplexTypeTransformer.Builder().setPrefixesToRename(prefixesToRename).build();
     try {
       transformer.renamePrefixes(genericRow);
-      Assert.fail("Should fail due to empty name after renaming");
+      fail("Should fail due to empty name after renaming");
     } catch (RuntimeException e) {
       // expected
     }
-
-    // case where nothing gets renamed
-    prefixesToRename = new HashMap<>();
-    transformer = new ComplexTypeTransformer(new ArrayList<>(), ".",
-        DEFAULT_COLLECTION_TO_JSON_MODE, prefixesToRename, null);
-    genericRow = new GenericRow();
-    genericRow.putValue("a", 1L);
-    genericRow.putValue("test", 2L);
-    transformer.renamePrefixes(genericRow);
-    Assert.assertEquals(genericRow.getValue("a"), 1L);
-    Assert.assertEquals(genericRow.getValue("test"), 2L);
   }
 
   @Test
@@ -484,8 +501,6 @@ public class ComplexTypeTransformerTest {
     HashMap<String, String> prefixesToRename = new HashMap<>();
     prefixesToRename.put("map1.", "");
     prefixesToRename.put("map2", "test");
-    ComplexTypeTransformer transformer = new ComplexTypeTransformer(new ArrayList<>(), ".",
-        DEFAULT_COLLECTION_TO_JSON_MODE, prefixesToRename, null);
 
     // test flatten root-level tuples
     GenericRow genericRow = new GenericRow();
@@ -501,12 +516,17 @@ public class ComplexTypeTransformerTest {
     map2.put("c", 3);
     genericRow.putValue("map2", map2);
 
-    transformer.transform(genericRow);
-    Assert.assertEquals(genericRow.getValue("a"), 1L);
-    Assert.assertEquals(genericRow.getValue("b"), "v");
-    Assert.assertEquals(genericRow.getValue("im1.aa"), 2);
-    Assert.assertEquals(genericRow.getValue("im1.bb"), "u");
-    Assert.assertEquals(genericRow.getValue("test.c"), 3);
+    List<GenericRow> transformedRows;
+    ComplexTypeTransformer transformer =
+        new ComplexTypeTransformer.Builder().setPrefixesToRename(prefixesToRename).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 1);
+    GenericRow transformedRow = transformedRows.get(0);
+    assertEquals(transformedRow.getValue("a"), 1L);
+    assertEquals(transformedRow.getValue("b"), "v");
+    assertEquals(transformedRow.getValue("im1.aa"), 2);
+    assertEquals(transformedRow.getValue("im1.bb"), "u");
+    assertEquals(transformedRow.getValue("test.c"), 3);
   }
 
   @Test
@@ -514,25 +534,26 @@ public class ComplexTypeTransformerTest {
     HashMap<String, String> prefixesToRename = new HashMap<>();
     prefixesToRename.put("info.", "");
     prefixesToRename.put("class_teacher", "teacher");
-    ComplexTypeTransformer transformer = new ComplexTypeTransformer(new ArrayList<>(), ".",
-        DEFAULT_COLLECTION_TO_JSON_MODE, prefixesToRename, null);
 
     // test flatten root-level tuples
     GenericRow genericRow = new GenericRow();
     genericRow.putValue("name", "Jane");
     Map<String, Object> info = new HashMap<>();
-    genericRow.putValue("info", Map.of(
-        "id", "100",
-        "address", Map.of("street", "1 Park Street", "city", "San Francisco", "state", "CA")
-    ));
+    genericRow.putValue("info",
+        Map.of("id", "100", "address", Map.of("street", "1 Park Street", "city", "San Francisco", "state", "CA")));
     genericRow.putValue("class_teacher", Map.of("name", "Max"));
 
-    transformer.transform(genericRow);
-    Assert.assertEquals(genericRow.getValue("name"), "Jane");
-    Assert.assertEquals(genericRow.getValue("id"), "100");
-    Assert.assertEquals(genericRow.getValue("address.street"), "1 Park Street");
-    Assert.assertEquals(genericRow.getValue("address.city"), "San Francisco");
-    Assert.assertEquals(genericRow.getValue("address.state"), "CA");
-    Assert.assertEquals(genericRow.getValue("teacher.name"), "Max");
+    List<GenericRow> transformedRows;
+    ComplexTypeTransformer transformer =
+        new ComplexTypeTransformer.Builder().setPrefixesToRename(prefixesToRename).build();
+    transformedRows = transformer.transform(List.of(genericRow));
+    assertEquals(transformedRows.size(), 1);
+    GenericRow transformedRow = transformedRows.get(0);
+    assertEquals(transformedRow.getValue("name"), "Jane");
+    assertEquals(transformedRow.getValue("id"), "100");
+    assertEquals(transformedRow.getValue("address.street"), "1 Park Street");
+    assertEquals(transformedRow.getValue("address.city"), "San Francisco");
+    assertEquals(transformedRow.getValue("address.state"), "CA");
+    assertEquals(transformedRow.getValue("teacher.name"), "Max");
   }
 }
